# MoDiLipiBot

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
src/modilipi_bot/: main.py  quote2image.py
