[project]
name = "modilipibot"
version = "0.2.0"
description = "Telegram bot for converting Devnagari text to Modi Lipi text."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aksharamukha==2.3",
    "anyio==4.13.0",
    "apscheduler==3.11.2",
    "cachetools==7.0.5",
    "certifi==2026.2.25",
    "charset-normalizer==3.4.7",
    "deprecated==1.3.1",
    "fonttools==4.62.1",
    "h11==0.16.0",
    "httpcore==1.0.9",
    "httpx==0.28.1",
    "idna==3.11",
    "jaconv==0.5.0",
    "langcodes==3.5.1",
    "language-data==1.4.0",
    "lxml==6.0.4",
    "marisa-trie==1.4.1",
    "notofonttools==0.3.2",
    "pillow==12.2.0",
    "pykakasi==2.3.0",
    "python-telegram-bot==22.7",
    "pytz==2026.1.post1",
    "pytz-deprecation-shim==0.1.0.post0",
    "pyyaml==6.0.3",
    "regex==2026.4.4",
    "requests==2.33.1",
    "rfc3986==2.0.0",
    "ruff>=0.15.10",
    "six==1.17.0",
    "sniffio==1.3.1",
    "tornado==6.5.5",
    "tzdata==2026.1",
    "tzlocal==5.3.1",
    "unicodedata2==17.0.1",
    "urllib3==2.6.3",
    "wrapt==2.1.2",
]
